<resources>
    <string name="app_name">Simples Acesso</string>

    <string name="google_api_maps">AIzaSyA1Rf2Bs1XScX-rsi1sWRopc9FlVRgDhjk</string>

    <string name="title_newaccount">Novo Usuário</string>
    <string name="info_text_newaccount">Informe seu telefone e crie sua senha de acesso</string>
    <string name="button_send_newaccount">Salvar</string>
    <string name="info_terms_newaccount">Concordo com os Termos de Uso do Simples Acesso.</string>
    <string name="title_verification_sms">Validação SMS</string>
    <string name="info_exit_app">Deseja realmente sair?</string>
    <string name="info_update_account">Atualize suas informações para utilizar todos os nossos serviços</string>
    <string name="title_service_emergency">Serviços</string>
    <string name="info_box_service">Quem você deseja chamar?</string>
    <string name="title_perfil">Meu Perfil</string>
    <string name="info_perfil">Suas informações pessoais sempre são verificadas para melhor garantir sua segurança</string>
    <string name="label_button_save_perfil">Guardar</string>
    <string name="title_requests_services">Solicitações</string>
    <string name="info_not_requests_services">Você ainda não realizou nenhuma solicitção</string>
    <string name="info_ok_save_perfil">Informações salvas com sucesso</string>
    <string name="info_not_gps">Habilite seu GPS</string>
    <string name="info_error_code_sms">Código inválido</string>
    <string name="info_login_label">Qual seu número de telefone?</string>
    <string name="info_label2_login">Informe seu número de telefone com o DDD para prosseguir</string>
    <string name="label_police_tab">POLÍCIA</string>
    <string name="label_samu_tab">SAMU</string>
    <string name="label_fireman_tab">BOMBEIROS</string>
    <string name="label_perfil_tab">Perfil</string>
    <string name="info_attendence">Qual sua emergência?</string>
    <string name="send_police">Polícia</string>
    <string name="send_samu">Samu</string>
    <string name="send_fireman">Bombeiros</string>
    <string name="info_label_local_user">Você está em</string>
    <string name="label_edit_local_user">Alterar</string>
    <string name="info_service_emergency">Qual tipo de sua emergência?</string>
    <string name="title_search_place">Buscar</string>
    <string name="info_not_location">Localização não encontrada</string>
    <string name="info_load_local_user">Aguarde...\\nCarregando sua localização</string>
    <string name="search_title">Pesquisar</string>
    <string name="hint_search_place">Digite aqui...</string>
    <string name="label_button_service_emergency">Chamar</string>
    <string name="item_edit_profile">Minhas informações</string>
    <string name="item_solicitacoes_profile">Solicitações</string>
    <string name="item_termos_profile">Termos e Privacidade</string>
    <string name="item_config_profile">Configurações</string>
    <string name="item_sair_profile">Sair</string>
    <string name="item_hospital_profile">Hospitais</string>
    <string name="item_delegacia_profile">Delegacias</string>
    <string name="title_hospitals">Hospitais</string>
    <string name="loading_text_hospitais">Carregando hospitais mais próximos a você</string>
    <string name="title_delegacias">Delegacias</string>
    <string name="title_minhas_informacoes">Informações</string>
    <string name="title_inicio_atendimento">Atendimento</string>

</resources>
