<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_police"
            android:checked="true"
            android:icon="@drawable/ic_police_car_with_light"
            android:title="@string/label_police_tab" />
        <item
            android:id="@+id/item_ambulance"
            android:checked="true"
            android:icon="@drawable/ic_ambulace"
            android:title="@string/label_samu_tab" />
        <item
            android:id="@+id/item_fireman"
            android:checked="true"
            android:icon="@drawable/ic_fire_truck"
            android:title="@string/label_fireman_tab" />
    </group>
</menu>