<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_newaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/info_text_newaccount"
                android:layout_marginBottom="16dp"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_cellphone_newaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/cellphone_newaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Número de telefone"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_password_newaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/password_newaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Senha"
                    android:inputType="numberPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_conf_password_newaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/conf_password_newaccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirma sua senha"
                    android:inputType="numberPassword"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp">

                <CheckBox
                    android:id="@+id/check_terms_newaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"
                    android:text="@string/info_terms_newaccount"/>

            </LinearLayout>



            <Button
                android:id="@+id/button_send_newaccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_login"
                android:textColor="@color/colorWhite"
                android:fontFamily="@font/roboto"
                android:text="@string/button_send_newaccount"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>